; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-connect.c_pqGetHomeDirectory.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-connect.c_pqGetHomeDirectory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }

@BUFSIZ = common dso_local global i32 0, align 4
@CSIDL_APPDATA = common dso_local global i32 0, align 4
@MAX_PATH = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pqGetHomeDirectory(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.passwd, align 4
  %9 = alloca %struct.passwd*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = load i32, i32* @BUFSIZ, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %6, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %7, align 8
  store %struct.passwd* null, %struct.passwd** %9, align 8
  %15 = call i32 (...) @geteuid()
  %16 = trunc i64 %12 to i32
  %17 = call i32 @pqGetpwuid(i32 %15, %struct.passwd* %8, i8* %14, i32 %16, %struct.passwd** %9)
  %18 = load %struct.passwd*, %struct.passwd** %9, align 8
  %19 = icmp eq %struct.passwd* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  store i32 1, i32* %10, align 4
  br label %28

21:                                               ; preds = %2
  %22 = load i8*, i8** %4, align 8
  %23 = load %struct.passwd*, %struct.passwd** %9, align 8
  %24 = getelementptr inbounds %struct.passwd, %struct.passwd* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @strlcpy(i8* %22, i32 %25, i32 %26)
  store i32 1, i32* %3, align 4
  store i32 1, i32* %10, align 4
  br label %28

28:                                               ; preds = %21, %20
  %29 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %29)
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @pqGetpwuid(i32, %struct.passwd*, i8*, i32, %struct.passwd**) #2

declare dso_local i32 @geteuid(...) #2

declare dso_local i32 @strlcpy(i8*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
